Implement @MDE framework compatibility and set FileViewer from to vertical.