@@ -64,17 +64,16 @@ public class DynamicEventAdapter implements UserPathConstants {
 
 
     private static StringBuilder parseFile(NodeList itemList) {
-
         StringBuilder stringBuilder = new StringBuilder();
         float x = 0, y = 0, z = 0;
         int entry = 0;
 
         List<InGameObject> inGameObjectsList = new ArrayList<>();
+        InGameObject referenceObject = null;
 
         for (int i = 0; i < itemList.getLength(); i++) {
             Element element = (Element) itemList.item(i);
             NodeList events = element.getElementsByTagName("event");
-            System.out.println(events.item(0));
 
             for (int j = 0; j < events.getLength(); j++) {
                 Element event = (Element) events.item(j);
@@ -83,11 +82,21 @@ public class DynamicEventAdapter implements UserPathConstants {
 
                 for (int k = 0; k < positions.getLength(); k++) {
                     Element pos = (Element) positions.item(k);
-                    inGameObjectsList.add(new InGameObject(inGameObjectName, pos.getAttribute("x"), pos.getAttribute("y"), pos.getAttribute("a"), pos.getAttribute("z")));
+                    InGameObject inGameObject = new InGameObject(inGameObjectName, pos.getAttribute("x"), pos.getAttribute("y"), pos.getAttribute("a"), pos.getAttribute("z"));
 
+                    /** double underscore "__" is being used, because the class name might eventually change, but in the mod itself it will always have that double underscore to make it alphabetically first in order.*/
+                    if (inGameObjectName.contains("__")) {
+                        referenceObject = inGameObject;
+                    }
+
+                    inGameObjectsList.add(inGameObject);
                 }
-
             }
+        }
+
+        if (referenceObject != null) {
+            inGameObjectsList.remove(referenceObject);
+            inGameObjectsList.add(0, referenceObject);
         }
 
         List<String> spawnCabableObjectsList = readProtoClassNames();
@@ -125,55 +134,16 @@ public class DynamicEventAdapter implements UserPathConstants {
         return stringBuilder;
     }
 
+
     private static void prepareEventFile(InGameObject inGameObject, List<InGameObject> inGameObjectsList, boolean canSpawnLoot, StringBuilder stringBuilder) {
-        if (inGameObjectsList.get(0).equals(inGameObject) && canSpawnLoot) {
-            stringBuilder.append("<child type=\"")
-                    .append(inGameObject.getObjectClassName()).append("\" deloot=\"1\" lootmax=\"1\" lootmin=\"1")
-                    .append("\" x=\"")
-                    .append(inGameObject.x)
-                    .append("\" z=\"")
-                    .append(inGameObject.z)
-                    .append("\" a=\"")
-                    .append(inGameObject.a)
-                    .append("\" y=\"")
-                    .append(inGameObject.y)
-                    .append("\"/>\n");
-        } else if (inGameObjectsList.get(0).equals(inGameObject)) {
-            stringBuilder.append("<child type=\"")
-                    .append(inGameObject.getObjectClassName())
-                    .append("\" x=\"")
-                    .append(inGameObject.x)
-                    .append("\" z=\"")
-                    .append(inGameObject.z)
-                    .append("\" a=\"")
-                    .append(inGameObject.a)
-                    .append("\" y=\"")
-                    .append(inGameObject.y)
-                    .append("\"/>\n");
+        if (inGameObjectsList.getFirst().equals(inGameObject) && canSpawnLoot) {
+            stringBuilder.append("<child type=\"").append(inGameObject.getObjectClassName()).append("\" deloot=\"1\" lootmax=\"1\" lootmin=\"1").append("\" x=\"").append(inGameObject.x).append("\" z=\"").append(inGameObject.z).append("\" a=\"").append(inGameObject.a).append("\" y=\"").append(inGameObject.y).append("\"/>\n");
+        } else if (inGameObjectsList.getFirst().equals(inGameObject)) {
+            stringBuilder.append("<child type=\"").append(inGameObject.getObjectClassName()).append("\" x=\"").append(inGameObject.x).append("\" z=\"").append(inGameObject.z).append("\" a=\"").append(inGameObject.a).append("\" y=\"").append(inGameObject.y).append("\"/>\n");
         } else if (canSpawnLoot) {
-            stringBuilder.append("<child type=\"")
-                    .append(inGameObject.getObjectClassName()).append("\" spawnsecondary=\"false\" deloot=\"1\" lootmax=\"1\" lootmin=\"1")
-                    .append("\" x=\"")
-                    .append(inGameObject.x)
-                    .append("\" z=\"")
-                    .append(inGameObject.z)
-                    .append("\" a=\"")
-                    .append(inGameObject.a)
-                    .append("\" y=\"")
-                    .append(inGameObject.y)
-                    .append("\"/>\n");
+            stringBuilder.append("<child type=\"").append(inGameObject.getObjectClassName()).append("\" spawnsecondary=\"false\" deloot=\"1\" lootmax=\"1\" lootmin=\"1").append("\" x=\"").append(inGameObject.x).append("\" z=\"").append(inGameObject.z).append("\" a=\"").append(inGameObject.a).append("\" y=\"").append(inGameObject.y).append("\"/>\n");
         } else {
-            stringBuilder.append("<child type=\"")
-                    .append(inGameObject.getObjectClassName())
-                    .append("\" spawnsecondary=\"false\" x=\"")
-                    .append(inGameObject.x)
-                    .append("\" z=\"")
-                    .append(inGameObject.z)
-                    .append("\" a=\"")
-                    .append(inGameObject.a)
-                    .append("\" y=\"")
-                    .append(inGameObject.y)
-                    .append("\"/>\n");
+            stringBuilder.append("<child type=\"").append(inGameObject.getObjectClassName()).append("\" spawnsecondary=\"false\" x=\"").append(inGameObject.x).append("\" z=\"").append(inGameObject.z).append("\" a=\"").append(inGameObject.a).append("\" y=\"").append(inGameObject.y).append("\"/>\n");
         }
     }
 
